--- a/index.html
+++ b/index.html
@@ -4,36 +4,30 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Parallax Template - Materialize</title>
+  <title>AirPilot Drone Services</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  
   <link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  
 </head>
 
 <body>
-  <!-- Dropdown Structure -->
-  <ul id="myDropdown" class="dropdown-content">
-    <li><a href="#!">Estate Agents</a></li>
-    <li><a href="#!">Golf Courses</a></li>
-    <li><a href="#!">Wedding Celebrations</a></li>
-    <li><a href="#!">Building & Inspection</a></li>
-    <li><a href="#!">Security Mapping</a></li>
-  </ul>
 
   <div class="navbar-fixed">
 
-    <nav class="blue lighten-4" role="navigation">
+    <nav class="blue darken-2" role="navigation">
       <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo">AirPilot</a>
+        <a id="logo-container" href="#" class="brand-logo"><img src="static/img/SmallLogoNav.png"></img></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
           <li><a href="#linkToAbout">About</a></li>
           <li><a href="#linkToContact">Contact</a></li>
           <li><a href="#">Gallery</a></li>
-          <li><a class="dropdown-trigger" href="#!" data-target="myDropdown">Services<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a href="#linkToServices">Services</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
@@ -54,9 +48,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center blue-text text-lighten-4">AirPilot Aerial Services</h1>
+        <h1 class="header center orange-text text-deep-orange-accent-3">AirPilot Aerial Services</h1>
         <div class="row center">
-          <h5 class="header col s12 center blue-text text-lighten-4">Professional Drone Photography and Video</h5>
+          <h5 class="header col s12 center center orange-text text-deep-orange-accent-3">Professional Drone Photography and Video</h5>
         </div>
 
         <br><br>
@@ -69,7 +63,7 @@
   <div class="container">
     <div class="row">
       <div class="s12 m6 l4">
-        <h4 id="linkToAbout">What do we do?</h4>
+        <h4 id="linkToServices">What we do?</h4>
         <p>Technological advances in <strong>UAV (Drone)</strong>, aerial photography and videography have given many more businesses and individuals access to high definition drone aerial photographs and video at affordable prices. The applications are
           only limited by your imagination! Airpilot UK can supply drone aerial photography and video for:-</hp>
           <ul class="fa-ul">
@@ -95,7 +89,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center blue-text text-lighten-4"><i class="material-icons">4k</i></h2>
+            <h2 class="center orange-text text-deep-orange-accent-3"><i class="material-icons">4k</i></h2>
             <h5 class="center">Aerial Photograph </h5>
 
             <p class="light"><strong>Airpilot UK</strong> have state of the art <strong>4K</strong> drone aerial photography equipment and software, enabling you to receive your drone aerial photographs and video in high resolution <strong>4K</strong> photography and
@@ -106,7 +100,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center blue-text text-lighten-4"><i class="material-icons">gps_fixed</i></h2>
+            <h2 class="center orange-text text-deep-orange-accent-3"><i class="material-icons">gps_fixed</i></h2>
             <h5 class="center">Drones and Equipment</h5>
 
             <p class="light"><strong>Airpilot UKv</strong> aerial drone services <strong>4K</strong> photography operates <strong>DJI Mavic Pro UAV's</strong> (Drones), which are extremely agile, lightweight and quite. Once on location, <strong>Airpilot UK</strong> are
@@ -118,7 +112,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center blue-text text-lighten-4"><i class="material-icons">security</i></h2>
+            <h2 class="center orange-text text-deep-orange-accent-3"><i class="material-icons">security</i></h2>
             <h5 class="center">Safe and Secure</h5>
 
             <p class="light">All of our operatives hold a <strong>Civil Aviation Authority 
@@ -230,28 +224,14 @@
         <h4 id="linkToContact">Contact Us</h4>
       </div>
     </div>
-    <div class="row">
-      <form class="col s12">
-        <div class="row">
-          <div class="input-field col s6">
-            <input id="input_text" type="text" data-length="10">
-            <label for="input_text">Your Name</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <textarea id="textarea2" class="materialize-textarea" data-length="120"></textarea>
-            <label for="textarea2">Enquiry</label>
-          </div>
-        </div>
+    <div class="container">
+      <form>
+        
       </form>
     </div>
-    <button class="btn waves-effect waves-light blue lighten-4" type="submit" name="action">Send
-      <i class="material-icons right">send</i>
-    </button>
   </div>
 
-  <footer class="page-footer blue lighten-4">
+  <footer class="page-footer blue darken-2">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -291,7 +271,7 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="static/js/materialize.js"></script>
+  <script src="static/js/materialize.min.js"></script>
   <script src="static/js/init.js"></script>
 
 </body>
