added custom js and styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AirPilot Drone Services</title>
+  <title>Airpilot.UK Drone Services</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -19,25 +19,16 @@
 
   <div class="navbar-fixed">
 
-    <nav class="blue darken-2" role="navigation">
+    <nav role="navigation">
       <div class="nav-wrapper container">
         <a id="logo-container" href="#" class="brand-logo"><img src="static/img/SmallLogoNav.png"></img></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
-          <li><a href="#linkToAbout">About</a></li>
-          <li><a href="#linkToContact">Contact</a></li>
-          <li><a href="#">Gallery</a></li>
           <li><a href="#linkToServices">Services</a></li>
+          <li><a href="#linkToGallery">Gallery</a></li>
+          <li><a href="#linkToContact">Contact</a></li>
+          <li><a href="#linkToAbout">About</a></li>
         </ul>
-
-        <ul id="nav-mobile" class="sidenav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a class="dropdown-trigger" href="#!" data-target="myDropdown">Services<i class="material-icons right">arrow_drop_down</i></a></li>
-        </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
     </nav>
 
@@ -48,16 +39,18 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center orange-text text-deep-orange-accent-3">AirPilot Aerial Services</h1>
+        <h1 class="header center heading">Airpilot.uk Aerial Services</h1>
         <div class="row center">
-          <h5 class="header col s12 center center orange-text text-deep-orange-accent-3">Professional Drone Photography and Video</h5>
+          <h5 class="header col s12 center center heading">Professional Drone Photography and Video</h5>
         </div>
 
         <br><br>
-
+<!--  -->
       </div>
     </div>
-    <div class="parallax"><img src="https://www.dpreview.com/files/p/articles/6048495841/MavicBeauty.jpeg" alt="Unsplashed background img 1"></div>
+    <div class="parallax">
+      <img src="https://www.dpreview.com/files/p/articles/6048495841/MavicBeauty.jpeg"></img>
+    </div>
   </div>
 
   <div class="container">
@@ -216,7 +209,22 @@
     </div>
     <div class="parallax"><img src="static/img/inspect.jpeg" alt="Unsplashed background img 3"></div>
   </div>
-
+   <div class="container">
+     <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>Gallery</h4>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra
+            ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
+            erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        </div>
+      </div>
+   </div>
+  <div class="carousel carousel-slider">
+    <a class="carousel-item" href="#one!"><img src="static/img/estate.jpg"></a>
+    <a class="carousel-item" href="#two!"><img src="static/img/houseFront.jpeg"></a>
+    <a class="carousel-item" href="#three!"><img src="static/img/houseRear.jpeg"></a>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col s12 center">
@@ -231,18 +239,19 @@
     </div>
   </div>
 
-  <footer class="page-footer blue darken-2">
+  <footer class="page-footer">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="black-text">Company Bio</h5>
-          <p class="white-text">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">About Us</h5>
+          <p class="grey-text">Based in the heart of Essex, AirPilot provides a full compliment of aerial services.</p>
+          <p class="grey-text">Contact :- </p>
 
 
         </div>
 
         <div class="col l3 s12">
-          <h5 class="black-text">Services</h5>
+          <h5 class="white-text">Services</h5>
           <ul>
             <li><a class="grey-text" href="#!">Estate Agents</a></li>
             <li><a class="grey-text" href="#!">Golf Course</a></li>
@@ -251,7 +260,7 @@
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="black-text">Gallery</h5>
+          <h5 id="linkToGallery" class="white-text">Gallery</h5>
           <ul>
             <li><a class="grey-text" href="#!">Estate Agents</a></li>
             <li><a class="grey-text" href="#!">Golf Course</a></li>
@@ -263,16 +272,17 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Martyn Stanley</a>
+        Made by <a class="brown-text text-lighten-3" href="https://github.com/4rc4ngel">Martyn Stanley</a>
       </div>
     </div>
   </footer>
 
 
   <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="static/js/materialize.min.js"></script>
   <script src="static/js/init.js"></script>
+  <script src="static/js/custom.js"></script>
 
 </body>
 
