--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
           only limited by your imagination! Airpilot UK can supply drone aerial photography and video for:-</hp>
           <ul class="fa-ul">
             <li id="icons"><span class="fa-li"><i class="fas fa-home fa-lg"></i></span>Property Marketing</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-golf-ball fa-lg"></i></span>Golf course “Fly-Over each hole”</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-user-tie fa-lg"></i></span>Corporate Promotional Video</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-music fa-lg"></i></span>Music Video aerial drone 4K footage.</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-video fa-lg"></i></span>TV Commercial aerial drone 4K video.</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-film fa-lg"></i></span>TV/Film aerial drone 4K video..</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-redo-alt fa-lg"></i></span>Panoramic 360* aerial drone photographs and video.</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-search fa-lg"></i></span>Aerial inspection (rooftop, chimney-stack, high level guttering), 4K drone photography and video</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-birthday-cake fa-lg"></i></span>Wedding ceremony and reception celebration 4K drone aerial photography and video.</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-rocket fa-lg"></i></span>Long range surveying.</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-golf-ball fa-lg"></i></span>Golf Course fly-over</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-user-tie fa-lg"></i></span>Corporate Promotional Videos</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-music fa-lg"></i></span>Music Videos</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-video fa-lg"></i></span>TV Commercials</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-film fa-lg"></i></span>TV/Film Aerial Shots</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-redo-alt fa-lg"></i></span>Panoramic 360*</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-search fa-lg"></i></span>High Level Inspection</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-birthday-cake fa-lg"></i></span>Wedding Celebration</li>
+            <li id="icons"><span class="fa-li"><i class="fas fa-rocket fa-lg"></i></span>Long Range Land Surveying</li>
           </ul>
 
       </div>
@@ -96,7 +96,7 @@
             <h2 class="center orange-text text-deep-orange-accent-3"><i class="material-icons">gps_fixed</i></h2>
             <h5 class="center">Drones and Equipment</h5>
 
-            <p class="light"><strong>Airpilot UKv</strong> aerial drone services <strong>4K</strong> photography operates <strong>DJI Mavic Pro UAV's</strong> (Drones), which are extremely agile, lightweight and quite. Once on location, <strong>Airpilot UK</strong> are
+            <p class="light"><strong>Airpilot UK</strong> aerial drone services <strong>4K</strong> photography operates <strong>DJI Mavic Pro UAV's</strong> (Drones), which are extremely agile, lightweight and quite. Once on location, <strong>Airpilot UK</strong> are
               ready to take aerial drone pictures and video, including digital stills, CCTV, high definition video and 360 degree panoramic images. On viewing digital stills, you will have the ability to zoom in, thus allowing you to compile a detailed
               report or collated images from the comfort of your own office/home. <strong>Airpilot UK</strong> operates from its base in Chigwell Essex to destinations <strong>UK wide</strong>.
             </p>
@@ -136,7 +136,7 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Real Estate</h4>
+          <h4>Property Marketing</h4>
           <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra
             ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
             erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
@@ -154,7 +154,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="static/img/houseRear.jpeg"></div>
+    <div class="parallax"><img src="static/img/houseFront.jpeg"></div>
   </div>
 
   <div class="container">
@@ -189,7 +189,7 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Inspection</h4>
+          <h4>High Level Inspection</h4>
           <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra
             ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
             erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
