updated content and images

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  
+
   <link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  
+
 </head>
 
 <body>
@@ -45,35 +45,67 @@
         </div>
 
         <br><br>
-<!--  -->
+        <!--  -->
       </div>
     </div>
     <div class="parallax">
       <img src="https://www.dpreview.com/files/p/articles/6048495841/MavicBeauty.jpeg"></img>
     </div>
   </div>
-
+  <!--icon section -->
   <div class="container">
+    <div class="row">
+      <div class="s12 m6">
+        <h4>About Us</h4>
+        <p class="left-align light">
+          <strong>Airpilot UK</strong> was set up in 2017 by owner <strong>Murray Rose</strong> and are based in 
+          West Essex, UK. Murray was trained and took his extensive 
+          <strong>UAV (Unmanned Aerial Vehicle)</strong>, tests with <strong>UAV8 Ltd</strong> and has aerial 
+          <strong>Permission for Commercial Operation (PfCO)</strong> granted from the 
+          <strong>Civil Aviation Authority (CAA)</strong>, to photograph and shoot video in a 
+          professional capacity anywhere in the United Kingdom. 
+        </p>
+        <p class="light">
+          Using video downlink, footage can be viewed in real time enabling pilot, 
+          cameraman and client absolute control of filming and framing. 
+          With gyro-stabilised capabilities our cameras can create smooth 
+          footage up to <strong>4K</strong> resolution.
+        </p>
+        <p class="light">
+          <strong>Airpilot UK</strong> provides a professional aerial video and photography service 
+        with highly experienced and fully qualified pilots also approved by the <strong>CAA</strong>. 
+        Using the latest cinematic technology, we fly UAVs or “Drones” with 
+        state of the art camera stabilisation to capture super smooth footage of up to <strong>4k</strong>. 
+        <strong>Airpilot UK</strong> pilots are thoroughly trained and fully insured.
+        </p>
+      </div>
+    </div>
     <div class="row">
       <div class="s12 m6 l4">
         <h4 id="linkToServices">What we do?</h4>
-        <p>Technological advances in <strong>UAV (Drone)</strong>, aerial photography and videography have given many more businesses and individuals access to high definition drone aerial photographs and video at affordable prices. The applications are
+        <p class="left-align light">Technological advances in <strong>UAV (Drone)</strong>, aerial photography and videography have given many more businesses and individuals access to high definition drone aerial photographs and video at affordable prices. The applications are
           only limited by your imagination! Airpilot UK can supply drone aerial photography and video for:-</hp>
-          <ul class="fa-ul">
-            <li id="icons"><span class="fa-li"><i class="fas fa-home fa-lg"></i></span>Property Marketing</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-golf-ball fa-lg"></i></span>Golf Course fly-over</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-user-tie fa-lg"></i></span>Corporate Promotional Videos</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-music fa-lg"></i></span>Music Videos</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-video fa-lg"></i></span>TV Commercials</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-film fa-lg"></i></span>TV/Film Aerial Shots</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-redo-alt fa-lg"></i></span>Panoramic 360*</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-search fa-lg"></i></span>High Level Inspection</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-birthday-cake fa-lg"></i></span>Wedding Celebration</li>
-            <li id="icons"><span class="fa-li"><i class="fas fa-rocket fa-lg"></i></span>Long Range Land Surveying</li>
-          </ul>
-
       </div>
     </div>
+    <ul class="fa-ul">
+      <div class="row">
+        <div class="fa-ul col s12 m6">
+          <li id="icons"><span class="fa-li"><i class="fas fa-home fa-lg"></i></span>Property Marketing</li>
+          <li id="icons"><span class="fa-li"><i class="fas fa-golf-ball fa-lg"></i></span>Golf Course fly-over</li>
+          <li id="icons"><span class="fa-li"><i class="fas fa-user-tie fa-lg"></i></span>Corporate Promotional Videos</li>
+          <li id="icons"><span class="fa-li"><i class="fas fa-music fa-lg"></i></span>Music Videos</li>
+          <li id="icons"><span class="fa-li"><i class="fas fa-video fa-lg"></i></span>TV Commercials</li>
+        </div>
+
+        <div class="fa-ul col s12 m6">
+          <li id="icons"><span class="fa-li"><i class="fas fa-film fa-lg"></i></span>TV/Film Aerial Shots</li>
+          <li id="icons"><span class="fa-li"><i class="fas fa-redo-alt fa-lg"></i></span>Panoramic 360*</li>
+          <li id="icons"><span class="fa-li"><i class="fas fa-search fa-lg"></i></span>High Level Inspection</li>
+          <li id="icons"><span class="fa-li"><i class="fas fa-birthday-cake fa-lg"></i></span>Wedding Celebration</li>
+          <li id="icons"><span class="fa-li"><i class="fas fa-rocket fa-lg"></i></span>Long Range Land Surveying</li>
+        </div>
+      </div>
+    </ul>
   </div>
   <div class="container">
     <div class="section">
@@ -85,20 +117,43 @@
             <h2 class="center orange-text text-deep-orange-accent-3"><i class="material-icons">4k</i></h2>
             <h5 class="center">Aerial Photograph </h5>
 
-            <p class="light"><strong>Airpilot UK</strong> have state of the art <strong>4K</strong> drone aerial photography equipment and software, enabling you to receive your drone aerial photographs and video in high resolution <strong>4K</strong> photography and
-              video, 1080 x 720 zoom photography and video, plus <strong>RAW</strong> and <strong>JPG</strong> photo’s if required. The pictures and/or videos are available immediately, allowing for instant assessment of high level surveying, or can be
-              sent on a wide variety of formats (email, Memory stick, CD-Rom). We can also edit your photo’s and videos into complete packages, including titles and music of your choice. </p>
+            <p class="light"><strong>Airpilot UK</strong> have state of the art 
+              <strong>4K</strong> drone aerial photography equipment and software, 
+              enabling you to receive your drone aerial photographs and video in high 
+              resolution <strong>4K</strong> photography and
+              video, 1080 x 720 zoom photography and video, plus <strong>RAW</strong> 
+              and <strong>JPG</strong> photo’s if required. 
+            </p>
+            <p class="light">
+              The pictures and/or 
+              videos are available immediately, allowing for instant assessment of
+              high level surveying, or can be
+              sent on a wide variety of formats (email, Memory stick, CD-Rom). We 
+              can also edit your photo’s and videos into complete packages, including
+              titles and music of your choice. 
+            </p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center orange-text text-deep-orange-accent-3"><i class="material-icons">gps_fixed</i></h2>
-            <h5 class="center">Drones and Equipment</h5>
+            <h5 class="center">Drones & Equipment</h5>
 
-            <p class="light"><strong>Airpilot UK</strong> aerial drone services <strong>4K</strong> photography operates <strong>DJI Mavic Pro UAV's</strong> (Drones), which are extremely agile, lightweight and quite. Once on location, <strong>Airpilot UK</strong> are
-              ready to take aerial drone pictures and video, including digital stills, CCTV, high definition video and 360 degree panoramic images. On viewing digital stills, you will have the ability to zoom in, thus allowing you to compile a detailed
-              report or collated images from the comfort of your own office/home. <strong>Airpilot UK</strong> operates from its base in Chigwell Essex to destinations <strong>UK wide</strong>.
+            <p class="light"><strong>Airpilot UK</strong> aerial drone services 
+              <strong>4K</strong> photography operates <strong>DJI Mavic Pro UAV's</strong> 
+              (Drones), which are extremely agile, lightweight and quite. 
+            </p>
+            <p class="light">
+              Once on location, 
+              <strong>Airpilot UK</strong> are
+              ready to take aerial drone pictures and video, including digital stills, 
+              CCTV, high definition video and 360 degree panoramic images. 
+              On viewing digital stills, you will have the ability to zoom in, 
+              thus allowing you to compile a detailed
+              report or collated images from the comfort of your own office/home. 
+              <strong>Airpilot UK</strong> operates from its base in Chigwell Essex 
+              to destinations <strong>UK wide</strong>.
             </p>
           </div>
         </div>
@@ -108,9 +163,23 @@
             <h2 class="center orange-text text-deep-orange-accent-3"><i class="material-icons">security</i></h2>
             <h5 class="center">Safe and Secure</h5>
 
-            <p class="light">All of our operatives hold a <strong>Civil Aviation Authority 
-            Permission of Commercial Operation (PfCO)</strong> and the company benefits from extensive <strong>Public Liability Insurance</strong>. We ensure compliance with all regulations including, if necessary, the preparation of all method statements
-              and risk assessments.</p>
+            <p class="light">
+              <strong>Airpilot UK’s</strong> first priority is your safety, the safety of the 
+              public and staff on all of our drone aerial photo or video assignments.
+            </p>
+            <p class="light">
+              <strong>Airpilot UK</strong> operates to strict safety procedures. All our pilots 
+              are fully qualified with a 
+              <strong>Permission for Commercial Operation Certificate (PfCO)</strong>, 
+              approved by the <strong>CAA</strong> throughout the United Kingdom.
+            </p>
+            <p class="light">
+              <strong>Airpilot UK</strong> is 
+              FULLY insured with up to <strong>£10M public liability</strong>.
+              We ensure compliance with all regulations including, 
+              if necessary, the preparation of all method statements and 
+              risk assessments.
+            </p>
           </div>
         </div>
       </div>
@@ -136,10 +205,40 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Property Marketing</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra
-            ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
-            erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4>Aerial Drone Photography for Selling or Marketing Residential and Commercial Property</h4>
+          <br>
+          <p class="left-align light">Why not use a drone to take aerial photographs 
+            and/or video to help sell houses and property?</p>
+          <p class="left-align light">
+            Estate Agents and private sellers globally are waking up to the fact 
+            that aerial photographs or short videos of any property, greatly increase its saleability.
+          </p>
+          <p class="left-align light">
+            Aerial images give a much better idea of the size and lay-out of a property, 
+            also showing the extent of the gardens or land that comes with it. 
+            Prospective buyers can see exactly what is for sale. 
+          </p>
+          <p class="left-align light">
+            Even houses and apartments that look relatively plain from ground level 
+            are given a whole new perspective by photographing them from an elevated viewpoint. 
+            So, give your property portfolio that extra sales push by using aerial 
+            drone property photography from Airpilot UK. What was once an expensive option, 
+            available only from helicopters or light aircraft, is now more readily 
+            available and more cost-effective than ever by using <strong>Airpilot UK</strong> 
+            remotely piloted <strong>UAV (Drone)</strong> systems.
+          </p>
+          <p class="left-align light">
+            <strong>Airpilot UK</strong> use <strong>DJI Mavic Pro</strong> drones to take up to <strong>4k</strong> 
+            photographs and videos to help sell houses and property. They are lightweight, 
+            extremely manoeuvrable and as all of our drones are fitted with 
+            <strong>DJI stealth propellers</strong>, very quite and unobtrusive.
+          </p>
+          <p class="left-align light">
+            <strong>Airpilot UK’s</strong> aerial drone photography or video 
+            property assignment prices start from as little as <strong>£180 (inc VAT)</strong> 
+            and for shooting multiple properties on the same day, increase by 
+            only £50 per property <strong>(3 x properties = £280 inc VAT)</strong>.
+          </p>
         </div>
       </div>
 
@@ -164,9 +263,28 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Golf Courses</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra
-            ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
-            erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <p class="left-align light"><strong>“Fly-Over”</strong> drone video footage is the perfect 
+            way for golf clubs to attract new members and to showcase the features 
+            of their courses. Prior to starting golf course drone flyover projects, 
+            we advise our clients on the best type of drone footage
+            and photographs that will work for them. Aerial drone photography is 
+            also a great opportunity to showcase golf courses, club houses and golf 
+            club facilities on websites, in promotional material and within the club itself.</p>
+          <p class="left-align light">
+            Golf course drone flyover footage and photography can be edited and 
+            produced to include voiceover, music, graphics, information and branding. 
+            Indeed, <strong>Airpilot UK</strong> can undertake production work on 
+            all aerial drone photography and filming projects to meet
+            all requirements.
+          </p>
+          <p class="left-align light">
+            <strong>Airpilot UK</strong> operates to strict safety procedures. 
+            All our pilots are fully qualified with a <strong>Permission for Commercial 
+            Operation Certificate</strong> (PfCO), approved by the <strong>CAA</strong> 
+            throughout the United Kingdom. <strong>Airpilot UK</strong> is FULLY insured 
+            with up to <strong>£10M public
+            liability</strong>.
+          </p>
         </div>
       </div>
 
@@ -181,7 +299,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="https://static1.squarespace.com/static/54a8a40fe4b08424e6a4166d/5a8ddb73c830258cf0e59788/5a8ddb73c830258cf0e5978b/1424022020669/drone+shot+hole+4+yankee.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="static/img/hover.jpg"></div>
   </div>
   <div class="container">
     <div class="section">
@@ -209,17 +327,17 @@
     </div>
     <div class="parallax"><img src="static/img/inspect.jpeg" alt="Unsplashed background img 3"></div>
   </div>
-   <div class="container">
-     <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Gallery</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra
-            ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
-            erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col s12 center">
+        <h3><i class="mdi-content-send brown-text"></i></h3>
+        <h4>Gallery</h4>
+        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra
+          ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
+          erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
       </div>
-   </div>
+    </div>
+  </div>
   <div class="carousel carousel-slider">
     <a class="carousel-item" href="#one!"><img src="static/img/estate.jpg"></a>
     <a class="carousel-item" href="#two!"><img src="static/img/houseFront.jpeg"></a>
@@ -234,7 +352,7 @@
     </div>
     <div class="container">
       <form>
-        
+
       </form>
     </div>
   </div>
